fix: position sticky bug affecting card stacking by changing overflow-x-hidden to overflow-x-clip

--- a/src/style.css
+++ b/src/style.css
@@ -37,11 +37,8 @@
 }
 
 html, body {
-  overflow-x: hidden;
-  max-width: 100vw;
-  position: relative;
+  overflow-x: clip;
 }
-
 
 @layer utilities {
   .material-symbols-outlined {
